--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@vercel/postgres": "^0.10.0",
+    "@vercel/speed-insights": "^1.1.0",
     "better-auth": "^0.8.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
