--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.0.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -19,29 +19,29 @@
     "@t3-oss/env-nextjs": "^0.11.1",
     "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.1.0",
-    "better-auth": "^0.8.0",
-    "class-variance-authority": "^0.7.0",
+    "better-auth": "^1.0.15",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv-cli": "^7.4.2",
-    "lucide-react": "^0.456.0",
-    "next": "15.0.3",
-    "next-themes": "^0.4.3",
-    "nuqs": "^2.1.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.4",
+    "dotenv-cli": "^7.4.4",
+    "lucide-react": "^0.468.0",
+    "next": "^15.1.0",
+    "next-themes": "^0.4.4",
+    "nuqs": "^2.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.0",
     "postcss": "^8",
-    "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.1",
+    "prisma": "^6.0.1",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
 }
